fix: Update spacing on small quote byline

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -41,7 +41,7 @@ $grays: map-merge(
 $vattenfall-black: #343434;
 $vattenfall-mid-blue: #2071b5;
 $vattenfall-sunflower-yellow: #ffda00;
-$vattenfall-blue-grey: #8694a0;
+$vattenfall-blue-grey: #69788C;
 
 $blue:    #007bff !default;
 $yellow:  #ffc107 !default;
